--- a/database/load_balancer/configuration/pgbouncer.ini
+++ b/database/load_balancer/configuration/pgbouncer.ini
@@ -9,7 +9,7 @@ auth_file = /etc/pgbouncer/userlist.txt
 logfile = /var/log/pgbouncer/pgbouncer.log
 admin_users = postgres
 stats_users = postgres
-pool_mode = session
+pool_mode = transaction
 max_client_conn = 10000
 default_pool_size = 1000
 reserve_pool_size = 500
